# cmake

./: CMakeLists.txt  Cmake  FindLibgpiod.cmake  main.cpp
cmake_modules/: FindLibgpiod.cmake  FindLibserialport.cmake
